--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+run {
+    standardInput = System.in
+}
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
